k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-api
  namespace: k8s-rag-chatbot
  labels:
    app: chatbot-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: chatbot-api
